--- a/free_shark/templates/my_commodity.html
+++ b/free_shark/templates/my_commodity.html
@@ -18,16 +18,28 @@
         <div class="col">
 
         </div>
-        <div class="col-8">
-            <label>商品种类</label>
-            <input type="text" name="choose_commodity_type" id="commodity_type" {% if request.args.get('commodity_type') %}
-                value={{ request.args.get('commodity_type') }} {% endif %}>
-            <label>商品名称</label>
-            <input type="text" name="choose_commodity_name" id="commodity_name" {% if request.args.get('commodity_name') %}
-                value={{ request.args.get('commodity_name') }} {% endif %}>
-            <button onclick="search()">搜索</button>
-            <button><a href="/commodity/index">返回</a></button>
+        <div class="col-10">
+            <div class="row">
+                <div class="col-2">
+
+                </div>
+                <div class="input-group flex-nowrap col-4">
+                    <input type="text" class="form-control" placeholder="商品种类" aria-label="商品种类" name="choose_commodity_type"
+                        id="commodity_type" {% if request.args.get('commodity_type') %}
+                        value={{ request.args.get('commodity_type') }} {% endif %} aria-describedby="addon-wrapping">
+                </div>
+                <div class="input-group flex-nowrap col-4">
+                    <input type="text" class="form-control" placeholder="商品名称" aria-label="商品名称" name="choose_commodity_name"
+                        id="commodity_name" {% if request.args.get('commodity_name') %}
+                        value={{ request.args.get('commodity_name') }} {% endif %} aria-describedby="addon-wrapping">
+                </div>
+                <div class="col-2">
+                    <button class="btn btn-primary" onclick="search()">搜索</button>
+                </div>
+            
+            </div>
         </div>
+
         <div class="col">
 
         </div>
@@ -37,7 +49,7 @@
         <div class="col">
 
         </div>
-        <div class="col-8">
+        <div class="col-10">
             {% for commodity in commodities %}
             {{ set_var(loop.length) }}
             {% if loop.index % 2 == 1 %}
@@ -104,6 +116,13 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title"><b>{{ commodity.commodity_name }}</b></h5>
+                        {% if commodity.status == 0 %}
+                            <p>状态: <b>未预约</b></p>
+                        {% elif commodity.status == 1 %}
+                            <p>状态: <b>已预约</b></p>
+                        {% else %}
+                            <p>状态: <b>已交易</b></p>
+                        {% endif %}
                         <p>种类: <b>{{ commodity.commodity_type }}</b></p>
                         <p>价格: <b>{{ commodity.price }}</b></p>
                         <p class="card-text">介绍：{{ commodity.commodity_introduction }}</p>
@@ -127,27 +146,81 @@
                                         <form action="/commodity/modify" method="POST" enctype="multipart/form-data">
                                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                                             <div class="modal-body">
-                                                <input type="hidden" id="commodity_id" name="commodity_id" value={{ commodity.id }} />
-                                                商品名称：<input type="text" id="new_commodity_name" name="new_commodity_name"
-                                                    value={{ commodity.commodity_name }}><br>
-                                                商品种类：<input type="text" id="new_commodity_type" name="new_commodity_type"
-                                                    value={{ commodity.commodity_type }}><br>
-                                                价格：<input type="number" id="new_commodity_price" name="new_commodity_price"
-                                                    value={{ commodity.price }}><br>
-                                                介绍：<textarea id="new_commodity_introduction"
-                                                    name="new_commodity_introduction">{{ commodity.commodity_introduction }}</textarea><br>
+                                                <input type="hidden" id="commodity_id" name="commodity_id" value={{ commodity.id }} />                                                   
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" placeholder="商品名称" aria-label="商品名称" id="new_commodity_name"
+                                                        name="new_commodity_name" value={{ commodity.commodity_name }} aria-describedby="basic-addon1">
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <input type="text" class="form-control" placeholder="商品种类" aria-label="商品种类" id="new_commodity_type"
+                                                        name="new_commodity_type" value={{ commodity.commodity_type }} aria-describedby="basic-addon1">
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <input type="number" class="form-control" placeholder="价格" aria-label="价格" id="new_commodity_price"
+                                                        name="new_commodity_price" value={{ commodity.price }} aria-describedby="basic-addon1">
+                                                </div>
+                                                <div class="md-form">
+                                                    <label for="new_commodity_introduction">介绍</label>
+                                                    <textarea id="new_commodity_introduction" name="new_commodity_introduction" class="md-textarea form-control"
+                                                        rows="3">{{ commodity.commodity_introduction }}</textarea>
+                                                </div>
                                                 上传你的实拍图
                                                 <br>
-                                                <input type="file" id="photo1" name="photo1">
-                                                <input type="file" id="photo1" name="photo2">
-                                                <input type="file" id="photo1" name="photo3">
-                                                <input type="file" id="photo1" name="photo4">
-                                                <input type="file" id="photo1" name="photo5">
+                                                <div class="input-group mb-3">
+                                                    <div class="custom-file">
+                                                        <input type="file" class="custom-file-input" id="photo1" name="photo1">
+                                                        <label class="custom-file-label" for="photo1" aria-describedby="photoAddon01">Choose
+                                                            file</label>
+                                                    </div>
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text" id="photoAddon01">Upload</span>
+                                                    </div>
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <div class="custom-file">
+                                                        <input type="file" class="custom-file-input" id="photo2" name="photo2">
+                                                        <label class="custom-file-label" for="photo2" aria-describedby="photoAddon02">Choose
+                                                            file</label>
+                                                    </div>
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text" id="photoAddon02">Upload</span>
+                                                    </div>
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <div class="custom-file">
+                                                        <input type="file" class="custom-file-input" id="photo3" name="photo3">
+                                                        <label class="custom-file-label" for="photo3" aria-describedby="photoAddon03">Choose
+                                                            file</label>
+                                                    </div>
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text" id="photoAddon03">Upload</span>
+                                                    </div>
+                                                </div>
+                                                <div class="input-group mb-4">
+                                                    <div class="custom-file">
+                                                        <input type="file" class="custom-file-input" id="photo4" name="photo4">
+                                                        <label class="custom-file-label" for="photo4" aria-describedby="photoAddon04">Choose
+                                                            file</label>
+                                                    </div>
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text" id="photoAddon04">Upload</span>
+                                                    </div>
+                                                </div>
+                                                <div class="input-group mb-3">
+                                                    <div class="custom-file">
+                                                        <input type="file" class="custom-file-input" id="photo5" name="photo5">
+                                                        <label class="custom-file-label" for="photo5" aria-describedby="photoAddon05">Choose
+                                                            file</label>
+                                                    </div>
+                                                    <div class="input-group-append">
+                                                        <span class="input-group-text" id="photoAddon05">Upload</span>
+                                                    </div>
+                                                </div>
                 
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                                                <button type="submit" class="btn btn-primary">上架</button>
+                                                <button type="submit" class="btn btn-primary">修改</button>
                                             </div>
                                         </form>
                                     </div>
@@ -231,6 +304,7 @@
             '/commodity/delete',
             { 'id': commodity_id },
             function (data) {
+                data = $.parseJSON(data);
                 if (data.code == 200) {
                     $("#hintBody").text("删除成功！");
                 } else {
@@ -243,7 +317,7 @@
                     location.reload();
                 }, 2000);
             }
-        )
+        );
     }
 
 
