--- a/free_shark/templates/admin/user.html
+++ b/free_shark/templates/admin/user.html
@@ -1,7 +1,21 @@
 {% extends 'admin/admin_layout.html' %}
 
 {% block content %}
-
+<div class="input-group mb-3">
+    <div class="input-group-prepend">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="search_target">选择搜索类型</button>
+        <div class="dropdown-menu">
+        <a class="dropdown-item" href="JavaScript:$('#search_target').text('用户名')">用户名</a>
+        <a class="dropdown-item" href="javascript:$('#search_target').text('邮箱')">邮箱</a>
+        <div role="separator" class="dropdown-divider"></div>
+        <a class="dropdown-item" href="javascript:$('#search_target').text('模糊搜索')">模糊搜索</a>
+        </div>
+    </div>
+    <input type="text" class="form-control" aria-label="Text input with dropdown button" id="search_content">
+    <div class="input-group-append">
+        <button class="btn btn-secondary" onclick="searchUser()">搜索</button>
+    </div>
+</div>
 <table class="table table-hover">
     <thead>
         <tr>
@@ -33,7 +47,8 @@
         {% endfor %}
     </tbody>
 </table>
-
+{% from 'utils.html' import Pagination %}
+{{ Pagination(page_num,page_size,count) }}
 <div class="modal fade show" role="dialog" id="update_modal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -134,6 +149,29 @@
         $.post(url,postData,function(){
             window.location.reload()
         })
+    }
+    function searchUser(){
+        var target=$("#search_target").text();
+        var content=$("#search_content").val();
+        var postData={
+            page_num:1,
+            page_size:20
+        };
+        switch(target){
+            case "用户名":
+                postData['username']=content;
+                break;
+            case "邮箱":
+                postData['email']=content;
+                break;
+            case "模糊搜索":
+            default:
+                postData['username']=postData['email']=content;
+                break;
+        }
+        var url="/api/user/search";
+        window.location.href="/admin/user?method=search&"+parseParams(postData);
+
     }
     var usernameEditField=InputField("#update_form input[name='username']",checkUsername_1);
     var emailEditField=InputField("#update_form input[name='email']",checkEmail);
